# EntropyFilterInsideDrum

./: CMakeLists.txt
include/: drumModel.h  entropy.h  findTarget.h  pointpose.h  segmentation.h
src/: drumModel.cpp  entropy.cpp  findTarget.cpp  main.cpp  paddles.cpp  pointpose.cpp  segmentation.cpp
